...
        case .VerseOCR:
            // get verses from capture session
            if let verses = self.ocrVC?.didReleaseCaptureButton() {
                newItems = verses
            }
        case .Photo:
            if let verse = self.photoVC?.didReleaseCaptureButton(){
                newItems = [verse]
            }
        }


        // pass along to scriptvc
...
        self.pickerView.hidden = hidden
        self.fxView.hidden = hidden
    }
    

    func enableCaptureButtn(){
        let image = UIImage(named: "Oval 1")
        self.captureButton.setImage(image, forState: .Normal)
    }
    
    func disableCaptureButton(){
        // just left middle
        let image = UIImage(named: "Oval 1-disabled")
...
